Fix theme flickering with _document file

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,7 @@ html {
   @apply bg-violet-50;
 }
 
-html.dark {
+html[data-theme='dark'] {
   background-color: #292929;
   color: #fff;
 }
